# openobserve-oss-mcp

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  run-insecure.sh
scripts/: README.md  delete_stream.py  get_stream_schema.py  ingest_sample_data.py  list_streams.py  mcp_client_openobserve.py  o2_mcp_client.py  o2_sql_shell.py  pydantic_ai_agent_mcp_http.py  search_logs.py
src/mcp_server_openobserve/: __init__.py  client.py  main.py  oo_client.py  server.py
